# crystal_communications_teleportation

./: Cargo.toml  README.md  main.rs
internal/: crystal_frequency_generator.rs  data_storage.rs  quantum_teleporter.rs  teleportation_coordinator.rs  tensor_flight_dynamics.rs  tensor_rematerialization.rs  user_interface.rs
scripts/: data_preprocessing.py  model_evaluation.py  model_prediction.py  model_training.py
