[package]
name = "crystal-teleportation"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]

[dependencies]
ndarray = "0.13.0"

[dependencies.rand]
version = "0.7.3"
features = ["std"]

[dependencies.num-complex]
version = "0.2.4"

[dependencies.itertools]
version = "0.9.0"

[dependencies.rust-chrono]
version = "0.4.10"

[dependencies.serde]
version = "1.0.107"

[dependencies.serde_json]
version = "1.0.47"

[dependencies.csv]
version = "1.1.3"
